drive-by: typos, optimized toList(), autoformat